# llm-google-gemini

./: .gitignore  README.md  pyproject.toml
.ipynb_checkpoints/: pyproject-checkpoint.toml
Codigo/: llm_google_gemini.ipynb
Codigo/.ipynb_checkpoints/: llm_google_gemini-checkpoint.ipynb
