[tool.poetry]
name = "llm-google-gemini"
version = "0.1.0"
description = ""
authors = ["Jiliar Silgado <jiliar.silgado@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.11"
google-generativeai = "^0.8.5"
google-genai = "^1.16.1"
googletrans = "^4.0.2"
transformers = "^4.52.3"
sacremoses = "^0.1.1"
pillow = "^11.2.1"
requests = "^2.32.3"
sentencepiece = "^0.2.0"
torch = "^2.7.0"
ipywidgets = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
